update layouts to be responsive above 1024 px, fix jumping scroll Top behaviour with scroll top button

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -10,8 +10,6 @@ header.main-header {
   flex-direction: column;
   height: 400px;
   width: 100vw; 
-
-  background-color: #68b5bf;
   background-image: url(https://www.toptal.com/designers/subtlepatterns/uploads/trees.png); */
 /* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
 }
